# asard

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE.txt  README.md  config.ini  environment-dev.yml  environment.yaml  pyproject.toml  requirements.txt
ERS_NRB/: ancillary.py  ard.py  cli.py  config.py  processor.py  snap.py  tile_extraction.py
ERS_NRB/metadata/: extract.py  mapping.py
ERS_NRB/resources/: config.ini
asard/: __init__.py  ancillary.py  ard.py  cli.py  config.py  osv.py  processor.py  sarsenic.py  snap.py
asard/metadata/: extract.py  mapping.py
asard/resources/: config.ini
docker/: README.md
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst
docs/source/about/: changelog.rst
docs/source/general/: ERS_NRB.rst  asard.rst  index.rst  installation.rst  usage.rst
tests/: README.md  conftest.py  run_slurm.sh  test_processing.py
